# point-cloud-registration

./: README.md
docker/: .env  Dockerfile  Makefile  docker-compose.yml
docker/context/: .bashrc  .gitignore  entrypoint.sh
point-cloud-registration/registration/: CMakeLists.txt  package.xml
point-cloud-registration/registration/include/registration/: base.h  math.h  octo_map.h  randomer.h  rc4pcs.h  registration.h  set.h  timer.h
point-cloud-registration/registration/include/thread_pool/: thread_pool.hpp
point-cloud-registration/registration/launch/: main.launch
point-cloud-registration/registration/src/: base.cpp  helper.cpp  math.cpp  octo_map.cpp  rc4pcs.cpp  registration.cpp  registration_node.cpp  set.cpp
point-cloud-registration/registration_core/: CMakeLists.txt  package.xml
point-cloud-registration/registration_core/include/registration_core/: base.h  cuda.cuh  math.h  octo_map.h  randomer.h  registration.h  set.h
point-cloud-registration/registration_core/include/thread_pool/: CHANGELOG.md  README.md
point-cloud-registration/registration_core/src/: base.cpp  cuda.cu  math.cpp  octo_map.cpp  registration.cpp  set.cpp
point-cloud-registration/registration_core/test/: CMakeLists.txt  registration_core_test.cpp
point-cloud-registration/registration_msgs/: CMakeLists.txt  package.xml
point-cloud-registration/registration_msgs/src/: empty.cpp
point-cloud-registration/registration_ros_wrapper/: CMakeLists.txt  package.xml
point-cloud-registration/registration_ros_wrapper/include/registration_ros_wrapper/: helper.h  registration_api.h
point-cloud-registration/registration_ros_wrapper/launch/: main.launch
point-cloud-registration/registration_ros_wrapper/src/: helper.cpp  registration_api.cpp  registration_node.cpp
rc-4pcs/: CMakeLists.txt  package.xml
rc-4pcs/launch/: main.launch
rc-4pcs/src/: rc-4pcs_node.cpp
rc-volumetric-4pcs/localization/: CMakeLists.txt  package.xml
rc-volumetric-4pcs/localization/include/localization/: base.h  helper.h  matrix.h  octo_map.h  pointCloud.h  rc4pcs.h  set.h  timer.h
rc-volumetric-4pcs/localization/launch/: main.launch
rc-volumetric-4pcs/localization/src/: base.cpp  cuda.cu  helper.cpp  localization_node.cpp  matrix.cpp  octo_map.cpp  pointCloud.cpp  rc4pcs.cpp  set.cpp
rc-volumetric-4pcs/localization_msgs/: CMakeLists.txt  package.xml
rc-volumetric-4pcs/localization_msgs/src/: empty.cpp
visualization/app/: app.py  requirements.txt  scene-T-fittings.ply
visualization/app/static/js/: visualizer.js
visualization/app/templates/: index.html
